added time stamp to blog

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<h1>{{ object.title }}</h1>
-<p> {{ object.content }}</p>
+{% include 'blog/list-inline.html' with blog_post=object detail=True %}
 
     <div class='row'>
 
@@ -17,4 +16,5 @@
     {% endif %}
 
     </div>
+     
 {% endblock %}
