--- a/blog/templates/blog/form.html
+++ b/blog/templates/blog/form.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 
-<form method="POST" action="."> {% csrf_token %}
+<form method="POST" action="." enctype='multipart/form-data'> {% csrf_token %}
     <!--<input type="text" name="full_name"/>-->
     <!--<input type="email" name="email"/>-->
     <!--<textarea name="content"></textarea>-->
