--- a/blog/templates/blog/list-inline.html
+++ b/blog/templates/blog/list-inline.html
@@ -1,8 +1,15 @@
 <div class="col-12 col-md-8 mb-1 mt-1 mx-auto">
+<div class="card {% if not blog_post.publish_date %} border border-warning {% endif %}"
     <div class="card">
         <div class="card-body">
+            {% if blog_post.image %}
+                <a href="{{ blog_post.get_absolute_url }}">
+                    <img src='{{blog_post.image.url }}' class="card-img-top" />
+                </a>
+            {% endif %}
             <h5 class="card-title">{{ blog_post.title }}</h5>
             <p class="card-text">
+                <small class='text-muted'>{{ blog_post.publish_date }}</small>
                 {% if truncate %}
                 {{ blog_post.content|linebreaks|truncatewords:30 }}
                 {% else %}
@@ -10,6 +17,7 @@
                 {% endif %}
             </p>
             {% if not detail %}
+                {% if not blog_post.publish_date %}Draft{% endif %}
                 <a href="{{ blog_post.get_absolute_url }}">View</a>
             {% endif %}
         </div>
