--- a/blog/templates/blog/form.html
+++ b/blog/templates/blog/form.html
@@ -1,20 +1,19 @@
 {% extends "base.html" %}
 
+{% extends "base.html" %}
+
+
 
 {% block content %}
 
 {% if title %}
-<h1>{{ title }}</h1>
+    <h1>{{ title }}</h1>
 {% endif %}
 
-
-<form method="POST" action="." enctype='multipart/form-data'> {% csrf_token %}
-    <!--<input type="text" name="full_name"/>-->
-    <!--<input type="email" name="email"/>-->
-    <!--<textarea name="content"></textarea>-->
-    
+<form method='POST' action='.'> {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Send</button>
-</form>
+    <button type='submit'>Send</button>
+</form> 
+
 
 {% endblock %}
