--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,6 +9,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="/blog">Contact</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="/blog">Links</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/blog">Blog</a>
       </li>
