--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,34 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="staticfiles/css/custom.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
+   
     <title>WAT4M</title>
 
 </head>
 
 <body>
     {% include 'navbar.html' %}
-    
+    <div class='section content'>
+       <img src="media/image/walkandtalk.png">
+    </div>
     <div class="container-fluid">
-       
-     {% block content %}
-    
-    {% endblock %}
-    
+
+        {% block content %} {% endblock %} {% include 'footer.html' %}
+
     </div>
     {% include 'js.html' %}
 </body>
