--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="staticfiles/css/custom.css">
+   
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Font Awesome -->
@@ -15,6 +15,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="/static/css/custom.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
    
     <title>WAT4M</title>
 
@@ -23,14 +25,16 @@
 <body>
     {% include 'navbar.html' %}
     <div class='section content'>
-       <img src="media/image/walkandtalk.png">
+       <img src="/media/image/walkandtalk.png" class="img-fluid">
     </div>
     <div class="container-fluid">
 
-        {% block content %} {% endblock %} {% include 'footer.html' %}
+        {% block content %} {% endblock %} 
 
     </div>
+    {% include 'footer.html' %}
     {% include 'js.html' %}
+    
 </body>
 
 </html>
