--- a/templates/form.html
+++ b/templates/form.html
@@ -7,7 +7,7 @@
 <h1>{{ title }}</h1>
 {% endif %}
 
-
+<div class="container">
 <form method="POST" action="."> {% csrf_token %}
     <!--<input type="text" name="full_name"/>-->
     <!--<input type="email" name="email"/>-->
@@ -16,5 +16,6 @@
     {{ form.as_p }}
     <button type="submit">Send</button>
 </form>
+</div>
 
 {% endblock %}
