--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Try Django</a>
+  <a class="navbar-brand" href="/">W&T4M</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,10 +10,10 @@
         <a class="nav-link" href="/">Home</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="/blog">Contact</a>
+        <a class="nav-link" href="/contact">Contact</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="/blog">Links</a>
+        <a class="nav-link" href="/links">Links</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/blog">Blog</a>
