--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,8 +8,9 @@
     <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-12 py-5">
+      <div class="col-md-12 py-2">
         <div class="mb-5 flex-center">
+
           <!-- Facebook -->
           <a class="fb-ic" href="https://www.facebook.com/groups/715936945475212/">
             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
@@ -20,7 +21,7 @@
           </a>
           <!--Instagram-->
           <a class="ins-ic" href="https://www.instagram.com/walkandtalk4men/">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            <i class="fab fa-instagram fa-lg white-text fa-2x"> </i>
           </a>
         </div>
       </div>
@@ -33,10 +34,12 @@
   <!-- Footer Elements -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">2019: 
+  <div class="footer-copyright text-center py-3">2019:
     <a href="http://walkandtalk4men.com/">walkandtalk4men</a>
   </div>
   <!-- Copyright -->
 
 </footer>
 <!-- Footer -->
+
+
