--- a/templates/form.html
+++ b/templates/form.html
@@ -7,15 +7,18 @@
 <h1>{{ title }}</h1>
 {% endif %}
 
-<div class="container">
-<form method="POST" action="."> {% csrf_token %}
+
+<!--<div class="container wrapper">-->
+<!--<form method="POST" action="."> {% csrf_token %}-->
     <!--<input type="text" name="full_name"/>-->
     <!--<input type="email" name="email"/>-->
     <!--<textarea name="content"></textarea>-->
-    
-    {{ form.as_p }}
-    <button type="submit">Send</button>
-</form>
-</div>
+<!--    {{ form.as_p }}-->
+<!--    <button class="button" type="submit">Send</button>-->
+<!--</form>-->
+<!--</div>-->
+
+<p>Walk & talk 4 men is very much in its infancy stage if you feel like you could or would like to contribute in any way please do not hesitate to get in touch with the founder James: walkandtalk4men@gmail.com</p>
+
 
 {% endblock %}
