--- a/staticfiles/css/custom.css
+++ b/staticfiles/css/custom.css
@@ -27,38 +27,43 @@ h1{
 }
 
 .navbar-light .navbar-brand {
-    color: rgb(215, 163, 93);
+   color: #d0bd62;
 }
 
 
+/*___ WT4M picture ___*/
 
+.img-fluid{
+    margin-bottom: 1em;
+}
 
 
 /*---- form ----*/
-.container{
-    text-align: center;
-    margin:50px 0px; padding:0px;
-    
-}
 
-form{
-    margin-bottom: 1em;
-}
+
 .cyan.darken-3 {
     background-color: #3d808a!important;
 }
 
 
 
+
 /*--- links ----*/
-.center:hover {
+
+/*--- mind logo ----*/
+.center-img:hover {
   -webkit-filter: invert(1);
   filter: invert(1);
 }
 
-.center {
+.center-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 38%;
+  margin-bottom: 2em;
 }
+
+
+
+/*---  footer ----*/
