--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -3,6 +3,9 @@
 {% block content %}
 <h1>{{ title }}</h1>
 <h3>We are a support group for men and their mental health.</h3>
+<iframe width="100%" height="315"
+src="https://www.youtube.com/embed/iRwgFKViEGM">
+</iframe>
 <p>We get together a couple of times a month and have a stroll around
 a country park whilst having a chat in a safe place without judgement! It gives us guys the opportunity to offload, get things off our chest and talk about how we are feeling rather than bottling it up and suffering in silence.</p>
 {% endblock %}
