--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     
     {% include 'navbar.html' %}
     <div class='section content'>
-      <img src="{{ MEDIA_URL }}/image/walkandtalk.png" class="img-fluid">
+      <img src="{{ MEDIA_URL }}image/walkandtalk.png" class="img-fluid">
     </div>
     <div class="container-fluid">
 
