--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,7 +27,7 @@
     
     {% include 'navbar.html' %}
     <div class='section content'>
-      <img src="{{ MEDIA_URL }}image/walkandtalk.png" class="img-fluid">
+      <img src="/media/image/walkandtalk.png" class="img-fluid">
     </div>
     <div class="container-fluid">
 
