--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
     
     {% include 'navbar.html' %}
     <div class='section content'>
-      <img src="/image/walkandtalk.png" class="img-fluid">
+      <img src="{% static "image/walkandtalk.png" %}" class="img-fluid">
+     
     </div>
     <div class="container-fluid">
 
