--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 <h1>{{ title }}</h1>
-<h3>We are a support group for men and their mental health.</h3>
+<h3>We are a support group for men and their mental health.</h3> 
+ <img src="{% static "image/walkandtalk.png" %}" class="img-fluid">
 <iframe width="100%" height="315"
 src="https://www.youtube.com/embed/iRwgFKViEGM">
 </iframe>
