fixed picture prblem

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -7,14 +7,14 @@
     <div class='row'>
 
     
-        
+     {% if user.is_staff %}   
         
          <div class='col-12'>
             <a href='{{ object.get_edit_url }}'>Edit</a>
             <a href='{{ object.get_delete_url }}'>Delete</a>
         </div>
         
-    
+    {% endif %}
 
     </div>
      
