--- a/templates/links_page.html
+++ b/templates/links_page.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
 
 {% if title %}
 <h1>{{ title }}</h1>
 {% endif %}
 <p>Just like it says on the tin we are a group that brings blokes together, goes for walks and talk in a casual, open and inviting manner. If the place you are at requires deeper assistance we thoroughly recommend looking at the great work that the charity MIND do. They can offer specialist help far beyond our capability. Simply click on the logo below...</p>
-<a href="https://www.mind.org.uk/" target="_blank"><img src="/image/mind.png" class="center-img"></img></a>
+<a href="https://www.mind.org.uk/" target="_blank"><img src="{% static 'image/mind.png' %}" class="center-img"></img></a>
 {% endblock %}
 
 
