--- a/searches/templates/searches/view.html
+++ b/searches/templates/searches/view.html
@@ -18,7 +18,7 @@
 
                 {% endif %}
 
-
+                {{blog_list}}
                 {% for blog_item in blog_list %}
 
                       {% include 'blog/list-inline.html' with blog_post=blog_item truncate=True detail=False %}
